samples/_failures_safe/1761473056_c25d00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_505622b3.c: In function ‘main’:
./samples/SAFE/__tmp_505622b3.c:155:9: error: expected declaration or statement at end of input
  155 |         destroy_matrix(mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_505622b3.c:155:9: error: expected declaration or statement at end of input
